# ferrotorch

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  ferrotorch-design.md  phase-0-orchestrator.md  phase-1-autograd-engine.md  phase-3-optim-serialize.md  phase-4-data-loading.md  phase-5-vision.md  phase-6-gpu-backend.md
.cargo/: config.toml
.design/: phase-0-orchestrator.md  phase-1-autograd-engine.md  phase-10-pytorch-parity.md  phase-2-nn-modules.md  phase-3-optim-serialize.md  phase-4-data-loading.md  phase-5-vision.md  phase-6-gpu-backend.md  phase-7-distributed.md  phase-8-jit.md  unified-device-tensor.md
benchmarks/: ferrotorch_bench.rs  numpy_bench.py  pytorch_bench.py  pytorch_reference.json  pytorch_validate.py
checkpoint/: skew_warnings.json  state.json
docs/audit/: 01-ferrotorch-core.md  02-ferrotorch-nn.md  03-ferrotorch-optim.md  04-ferrotorch-data.md  05-ferrotorch-train.md  06-ferrotorch-vision.md  07-ferrotorch-jit.md  08-ferrotorch-serialize.md  09-ferrotorch-gpu.md  10-ferrotorch-cubecl-xpu.md  11-ferrotorch-distributed.md  12-ferrotorch-distributions.md  13-ferrotorch-profiler.md  14-ferrotorch-hub-tokenize.md  15-ferrotorch-llama.md  16-ferray-ferrolearn-integration.md  README.md
ferrotorch/: Cargo.toml
ferrotorch-core/: Cargo.toml
ferrotorch-core/src/: bool_tensor.rs  complex_tensor.rs  cpu_pool.rs  creation.rs  device.rs  dispatch.rs  display.rs  dtype.rs  einops.rs  error.rs  fft.rs  flex_attention.rs  gpu_dispatch.rs  inplace.rs  int_tensor.rs  lib.rs  linalg.rs  masked.rs  methods.rs  named_tensor.rs  nested.rs  ops_trait.rs  profiler_hook.rs  quantize.rs  shape.rs  sparse.rs  special.rs  storage.rs  stride_tricks.rs  tensor.rs  vmap.rs
ferrotorch-core/src/autograd/: anomaly.rs  autocast.rs  checkpoint.rs  forward_ad.rs  grad_penalty.rs  gradcheck.rs  graph.rs  higher_order.rs  hooks.rs  mod.rs  no_grad.rs  saved_tensors.rs
ferrotorch-core/src/grad_fns/: activation.rs  arithmetic.rs  comparison.rs  cumulative.rs  fft.rs  indexing.rs  linalg.rs  mod.rs  quantize_grad.rs  reduction.rs  shape.rs  transcendental.rs
ferrotorch-core/src/ops/: cumulative.rs  elementwise.rs  higher_order.rs  indexing.rs  linalg.rs  mod.rs  search.rs  tensor_ops.rs
ferrotorch-core/src/signal/: mod.rs  windows.rs
ferrotorch-core/tests/: test_integration.rs
ferrotorch-cubecl/: Cargo.toml
ferrotorch-cubecl/src/: grammar.rs  kernels.rs  lib.rs  ops.rs  quant.rs  runtime.rs
ferrotorch-data/: Cargo.toml
ferrotorch-data/src/: collate.rs  dataloader.rs  dataset.rs  interop.rs  lib.rs  sampler.rs  transforms.rs
ferrotorch-distributed/: Cargo.toml
ferrotorch-distributed/src/: backend.rs  collective.rs  ddp.rs  device_mesh.rs  dtensor.rs  error.rs  fsdp.rs  gpu_collective.rs  hybrid_backend.rs  lib.rs  nccl_backend.rs  nccl_collective.rs  nccl_sys.rs  p2p.rs  sync_batch_norm.rs
ferrotorch-distributions/src/: bernoulli.rs  beta.rs  cauchy.rs  dirichlet.rs  exponential.rs  gamma.rs  gumbel.rs  half_normal.rs  independent.rs  kumaraswamy.rs  laplace.rs  lib.rs  lognormal.rs  low_rank_multivariate_normal.rs  mixture_same_family.rs  normal.rs  pareto.rs  poisson.rs  relaxed_bernoulli.rs  relaxed_one_hot_categorical.rs  student_t.rs  uniform.rs  von_mises.rs  weibull.rs
ferrotorch-gpu/: Cargo.toml
ferrotorch-gpu/examples/: nvrtc_smoke.rs
ferrotorch-gpu/src/: allocator.rs  backend_impl.rs  bf16.rs  blas.rs  buffer.rs  conv.rs  cufft.rs  cusolver.rs  device.rs  error.rs  flash_attention.rs  graph.rs  kernels.rs  lib.rs  memory_guard.rs  module_cache.rs  pool.rs  rng.rs  stream.rs  tensor_bridge.rs  transfer.rs
ferrotorch-gpu/tests/: test_gpu_channels_last.rs  test_gpu_clamp_backward.rs  test_gpu_eigh.rs  test_gpu_fft.rs  test_gpu_graph_pool.rs  test_gpu_lstsq.rs  test_gpu_lu_factor.rs  test_gpu_masked.rs  test_gpu_matrix_norm.rs  test_gpu_prod.rs  test_gpu_strided_copy.rs  test_gpu_strided_scatter.rs  (+1 more)
ferrotorch-jit/: Cargo.toml
ferrotorch-jit-script/: Cargo.toml
ferrotorch-llama/: Cargo.toml
ferrotorch-ml/: Cargo.toml  README.md
ferrotorch-ml/src/: adapter.rs  datasets.rs  lib.rs  metrics.rs
ferrotorch-mps/: Cargo.toml
ferrotorch-mps/src/: lib.rs
ferrotorch-nn/: Cargo.toml
ferrotorch-nn-derive/: Cargo.toml
ferrotorch-optim/: Cargo.toml
ferrotorch-serialize/: Cargo.toml
ferrotorch-serialize/src/: checkpoint.rs  gguf.rs  lib.rs  onnx_export.rs  pytorch_export.rs  pytorch_import.rs  safetensors_io.rs  state_dict.rs
ferrotorch-tokenize/: Cargo.toml
ferrotorch-train/: Cargo.toml
ferrotorch-vision/: Cargo.toml
ferrotorch-xpu/: Cargo.toml
heartbeats/: y4rr.json
locks/: 161.json  175.json  177.json  278.json  289.json  291.json  292.json  296.json  307.json  322.json  332.json  346.json  362.json  365.json  367.json  373.json  375.json  379.json  380.json  381.json  382.json  383.json  388.json  392.json  395.json  414.json  417.json  418.json  420.json  429.json  434.json  435.json  436.json  438.json  444.json  446.json  449.json  450.json  453.json  454.json  (+98 more)
meta/: counters.json
trust/: allowed_signers
(+939 files in other folders)
