[package]
name = "ferrotorch-data"
description = "Data loading, batching, and transforms for ferrotorch"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
ferrotorch-core = { workspace = true }
rayon = { workspace = true }
num-traits = { workspace = true }

# Feature-gated dependencies for Arrow / Polars interop.
# Pulled in only when the `arrow` or `polars` features are enabled.
# Versions pinned to ferray-numpy-interop 0.3.1's transitive deps to
# avoid a duplicate-arrow / duplicate-polars resolution.
ferray-numpy-interop = { workspace = true, optional = true }
arrow = { version = "58", optional = true }
polars = { version = "0.46", default-features = false, features = ["dtype-full"], optional = true }

[features]
default = []
# Tabular data interop. `arrow` enables Apache Arrow conversions; `polars`
# additionally pulls in DataFrame -> Tensor helpers (DataFrames depend on
# Arrow internally, so `polars` implies `arrow`).
arrow = ["dep:arrow", "dep:ferray-numpy-interop", "ferray-numpy-interop/arrow"]
polars = ["arrow", "dep:polars", "ferray-numpy-interop/polars"]

[dev-dependencies]
