[package]
name = "ferrotorch-distributed"
description = "Distributed training for ferrotorch — backends, collectives, and DDP"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[features]
default = []
gpu = ["dep:ferrotorch-gpu"]
nccl = ["gpu", "dep:libc"]

[dependencies]
ferrotorch-core = { workspace = true }
ferrotorch-nn = { workspace = true }
ferrotorch-serialize = { workspace = true }
ferrotorch-gpu = { workspace = true, optional = true }
libc = { version = "0.2", optional = true }
num-traits = { workspace = true }
safetensors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
