[package]
name = "ferrotorch-mps"
description = "Apple Silicon (Metal Performance Shaders) backend skeleton for ferrotorch"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
# Enable the actual Metal backend. Requires the `metal` crate which only
# builds on macOS / iOS. Off by default so non-Apple platforms can still
# depend on this crate (they just get the host-fallback / unavailable path).
metal-backend = []

[dependencies]
ferrotorch-core = { workspace = true }

[dev-dependencies]
